--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -75,25 +75,27 @@
                                                          <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
                                                      </form>
                                                     <div class="comment_extra comment_likes"><a href="#id_tekst" onclick="copyText('{{user.username}}', '{{obj.tekst}}', '{{obj.date}}')"><i class="fa fa-reply" style="font-size:22px;color:#e60e08" aria-hidden="true"></i>&nbsp;Odgovori</a></div>
-                                                    <form id = "post_report{{obj.objava_id}}" action="{% url 'objava:report' %}" method="post">
-                                                        {% csrf_token %}
-                                                        <div class="comment_extra comment_reply">
-                                                            <a  data-toggle="dropdown" href="#"><i class="fa fa-exclamation-triangle " style="font-size:22px;color:#e60e08" aria-hidden="true"></i> Prijavi objavu </a>
-                                                             <!--sad ide neka forma i pop up da je to zaprimljeno-->
-                                                             <div class="dropdown-menu">
-                                                                 <input type="hidden" value="{{ user.username }}" name="html_user">
-                                                                <input type="hidden" value="{{ obj.objava_id }}" name="html_objava">
-                                                                <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Uvredljiv ili neprimjeren sadržaj</a><br>
-                                                                <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Povreda autorskih prava</a>
-                                                                <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Ostalo</a>
-                                                                 <input type="hidden" value="{{ studij_id }}" name="get_studij_id">
-                                                                 <input type="hidden" value="{{ kolegij_id }}" name="get_kolegij_id">
-                                                                 <input type="hidden" value="{{ semestar_num }}" name="get_semestar_num">
-                                                                 <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
-                                                                 <input type="hidden" value="{{ smjer_id }}" name="get_smjer_id">
+                                                     {% if student.stars > 2 %}
+                                                        <form id = "post_report{{obj.objava_id}}" action="{% url 'objava:report' %}" method="post">
+                                                            {% csrf_token %}
+                                                            <div class="comment_extra comment_reply">
+                                                                <a  data-toggle="dropdown" href="#"><i class="fa fa-exclamation-triangle " style="font-size:22px;color:#e60e08" aria-hidden="true"></i> Prijavi objavu </a>
+                                                                 <!--sad ide neka forma i pop up da je to zaprimljeno-->
+                                                                 <div class="dropdown-menu">
+                                                                     <input type="hidden" value="{{ user.username }}" name="html_user">
+                                                                    <input type="hidden" value="{{ obj.objava_id }}" name="html_objava">
+                                                                    <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Uvredljiv ili neprimjeren sadržaj</a><br>
+                                                                    <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Povreda autorskih prava</a>
+                                                                    <a onclick="document.forms['post_report{{obj.objava_id}}'].submit()">Ostalo</a>
+                                                                     <input type="hidden" value="{{ studij_id }}" name="get_studij_id">
+                                                                     <input type="hidden" value="{{ kolegij_id }}" name="get_kolegij_id">
+                                                                     <input type="hidden" value="{{ semestar_num }}" name="get_semestar_num">
+                                                                     <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
+                                                                     <input type="hidden" value="{{ smjer_id }}" name="get_smjer_id">
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                    </form>
+                                                        </form>
+                                                     {% endif %}
                                                 </div>
                                             {% endif %}
                                             </div>
