--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -14,18 +14,18 @@
 				<div class="col-lg-8">
 
 					<div class="course_container" id="container-1">
-						<div class="course_title">{{kolegij_id}}
 
-                        </div>
-                        <form method="post">
-                                {% csrf_token %}
-                                ide zvjezdica
-                                {% if moj_kolegij %}
-                                <button type="submit" name="favorit">Izbrisi iz mojih kolegija</button>
-                                {% else %}
-                                <button type="submit" name="favorit">Dodaj u moj kolegij</button>
-                                {% endif %}
+                        <div class="course_title">{{kolegij_id}}</div>&nbsp; &nbsp;
+                         <form method="post">
+                            {% csrf_token %}
+                            {% if moj_kolegij %}
+                            <button type="submit" name="favorit"  class="btn btn-primary" style="background-color: #14bdee; border-color: #14bdee">Izbrisi iz mojih kolegija</button>
+                            {% else %}
+                            <button type="submit" name="favorit"  class="btn btn-primary" style="background-color: #14bdee; border-color: #14bdee">Dodaj u moje kolegije</button>
+                            {% endif %}
                         </form>
+
+
 
 						<!-- Course Tabs -->
 						<div class="course_tabs_container">
@@ -116,9 +116,11 @@
 											<div class="tab_panel_text">
 												<form method="post">
                                                     {% csrf_token %}
-                                                    <input type="text" name="tema_ime" maxlength="50" required="" id="id_tema_ime">
-                                                    <button type="submit" name="dodaj_temu">Dodaj</button>
-                                                </form>
+													<div class="form-inline">
+                                                    	<input type="text" name="tema_ime" maxlength="50" required="" id="id_tema_ime" class="form-control float-left" style="width: 250px">&nbsp;&nbsp;
+                                                    	<button type="submit" name="dodaj_temu" class="btn btn-primary" style="background-color: #14bdee; border-color: #14bdee">Dodaj</button>
+                                                	</div>
+												</form>
 											</div>
 
 											<!-- Popis svih trenutnih tema -->
@@ -126,9 +128,6 @@
                                             <div class="dropdown_item">
                                                 <div class="dropdown_item_title">
                                                     <a href="/objava/studij={{studij_id}}/smjer={{smjer_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}"><span>{{tema.tema_ime}}</span></a>
-                                                <div class="dropdown_item_text">
-                                                    <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-                                                </div>
                                             </div>
                                             {% endfor %}
 										</div>
