--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -20,7 +20,7 @@
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="logo_container">
-								<a href="{% url 'account:mypage' %}">
+								<a href="{% url 'homepage' %}">
 									<img src="{% static 'images/jez.png' %}" class="rounded-circle img-fluid img-thumbnail" style="height:80px;" alt="JezLogo">
 									<div class="logo_text">Jež</div>
 								</a>
